feat(auth): RBAC with requireRole guard and URL-based role rules (#3) (#17)